# llamazure

./: .flake8  .gitattributes  .gitignore  .pylintrc  BUILD  codecov.yml  pants.toml  pyproject.toml  readme.md  requirements.txt  requirements_test.txt
.github/workflows/: pants.yml
cicd/: BUILD  mypy_requirements.txt  requirements_tools.txt  tan.lockfile
llamazure/azgraph/: BUILD  __init__.py  azgraph.py  azgraph_test.py  changelog.md  codec.py  codec_test.py  integration_test.py  models.py  readme.md
llamazure/azrest/: BUILD  __init__.py  azrest.py  azrest_test.py  changelog.md  conftest.py  models.py  openapi.py  openapi_info.py  openapi_integration_test.py  openapi_test.py  readme.md
llamazure/history/: BUILD  __main__.py  app.py  collect.py  conftest.py  data.py  data_test.py  docker-compose.yml  integration_test.py  readme.md
llamazure/msgraph/: BUILD  __init__.py  changelog.md  codec.py  codec_test.py  msgraph.py  msgraph_test.py  readme.md
llamazure/rbac/: BUILD  changelog.md  codec.py  codec_test.py  conftest.py  integration_test.py  models.py  msgraph.py  msgraph_test.py  readme.md  repository.py  resources.py  roles.py  roles_test.py
llamazure/rid/: BUILD  changelog.md  conftest.py  mp.py  mp_test.py  readme.md  rid.py  rid_test.py  util.py  util_test.py
llamazure/test/: BUILD  conftest.py  credentials.py  inspect.py  util.py
llamazure/tf/: BUILD  changelog.md  conftest.py  models.py  models_test.py  network.py  network_integration_test.py  network_test.py  readme.md
llamazure/tools/: BUILD  changelog.md  readme.md
llamazure/tools/migrate/: BUILD  __main__.py  dashboard.py  integration_test.py  workbook.py
llamazure/tresource/: BUILD  changelog.md  conftest.py  itresource.py  mp.py  mp_test.py  readme.md  tresource.py  tresource_test.py
llamazure_tools/migrate/: BUILD  dashboard.py  integration_test.py  util.py  workbook.py
