[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "twine",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile="black"
line_length=180
known_first_party=[
    "llamazure"
]

[tool.black]
line_length=180

[tool.mypy]
pretty = true

[[tool.mypy.overrides]]
module = [
    "watchdog.*",
    "setuptools",
    "ansible.plugins.action",
    "ansible.errors",
    "azure.cli.*",
    "knack.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: integration tests",
]
addopts = "-m 'not integration'"
