[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "twine",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile="black"
line_length=180
known_first_party=[
    "llamazure"
]
indent = '	'

[tool.black]
line_length=180

[tool.mypy]
pretty = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "watchdog.*",
    "setuptools",
    "ansible.plugins.action",
    "ansible.errors",
    "azure.cli.*",
    "knack.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: integration tests",
    "admin: tests that need some amount of admin",
]

[tool.coverage.report]
exclude_also = [
    "# cov: err" # ignore unlikely error paths
]

[tool.ruff]
line-length=180
target-version = "py310"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = ["I", "W", "E"]
preview = true
ignore = ["W191", "E741", "E117"]

[tool.ruff.lint.isort]
known-first-party = ["llamazure"]

[tool.ruff.format]
indent-style="tab"
